<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>cn.murky</groupId>
        <artifactId>murky-library</artifactId>
        <version>1.0-SNAPSHOT</version>
    </parent>

    <artifactId>murky-socketd</artifactId>

    <dependencies>
        <!-- socket.d 的 solon 服务启动插件 -->
        <dependency>
            <groupId>org.noear</groupId>
            <artifactId>solon.boot.socketd</artifactId>
        </dependency>

        <!-- 使用哪个（或多个）传输包（按需选择）//这些传输包，会使用独立的端口 -->
        <dependency>
            <groupId>org.noear</groupId>
            <artifactId>socketd-transport-java-tcp</artifactId>
            <version>${socketd.version}</version>
        </dependency>

        <!-- 使用哪个（或多个）传输包（按需选择）//这些传输包，会使用独立的端口 -->
        <dependency>
            <groupId>cn.murky</groupId>
            <artifactId>murky-common</artifactId>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                    <compilerArgs>-parameters</compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>